@@ -531,20 +531,6 @@ function create_routine($routine, $row) {
 	;
 }
 
-/** Get defined check constraints
-* @param string
-* @return array [$name => $clause]
-*/
-function check_constraints($table) {
-	// MariaDB contains CHECK_CONSTRAINTS.TABLE_NAME, MySQL and PostrgreSQL not
-	return get_key_vals("SELECT c.CONSTRAINT_NAME, CHECK_CLAUSE
-FROM INFORMATION_SCHEMA.CHECK_CONSTRAINTS c
-JOIN INFORMATION_SCHEMA.TABLE_CONSTRAINTS t ON c.CONSTRAINT_SCHEMA = t.CONSTRAINT_SCHEMA AND c.CONSTRAINT_NAME = t.CONSTRAINT_NAME
-WHERE c.CONSTRAINT_SCHEMA = " . q($_GET["ns"] != "" ? $_GET["ns"] : DB) . "
-AND t.TABLE_NAME = " . q($table) . "
-AND CHECK_CLAUSE NOT LIKE '% IS NOT NULL'"); // ignore default IS NOT NULL checks in PostrgreSQL
-}
-
 /** Remove current user definer from SQL command
 * @param string
 * @return string
